[tool.poetry]
name = "rpg-game"
version = "0.1.0"
description = ""
authors = ["Roman <35300872+monaxovdulov@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "rpg_game"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
